// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocReporter empty 1`] = `
"
Rules:      0 total
Test Cases: 0 total

"
`;

exports[`DocReporter only errors 1`] = `
"
 FAIL  error-name1 (1 error)

✖ Error message
    Element error message.
    ├─ <div id=\\"element\\"><p>Content</p><p>Content</p><p>Content</p></div>
    ├─ at \\"#element\\"
    └─ http://localhost:1234/error-name1/1

Rules:      1 failed, 1 total
Test Cases: 1 failed, 1 total

"
`;

exports[`DocReporter only passed 1`] = `
"
Rules:      2 passed, 2 total
Test Cases: 2 passed, 2 total

"
`;

exports[`DocReporter passed and errors 1`] = `
"
 FAIL  error-name1 (1 error)

✖ Error message
    Element error message.
    ├─ <div id=\\"element\\"><p>Content</p><p>Content</p><p>Content</p></div>
    ├─ at \\"#element\\"
    └─ http://localhost:1234/error-name1/1
    Global error message.
    └─ http://localhost:1234/error-name1/1

 FAIL  error-name2 (1 error)

✖ Error message
    Element error message.
    ├─ <img src=\\"path/to.png\\" alt=\\"Alternative content\\" />
    ├─ at \\"img\\"
    └─ http://localhost:1234/error-name2/2

 FAIL  error-name3 (1 error)

✖ Error message

 FAIL  error-name4 (1 error)

✖ Error message
    Error!!
    ├─ <div id=\\"element\\"><p>Content</p><p>Content</p><p>Content</p></div>
    ├─ at \\"#element\\"
    └─ http://localhost:1234/error-name4/4

Rules:      1 passed, 4 failed, 5 total
Test Cases: 2 passed, 4 failed, 6 total

"
`;
